# pretty-match

./: .pre-commit-config.yaml  LICENSE.md  Makefile  README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml  publish.yml  test.yml
examples/: main.py
pretty_match/: attrs.py  comparable.py  results.py  typing.py
tests/: test_attrs.py  test_comparable.py
